gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-kid
  labels:
    name: app-kid
    project: kid-livraison
