gitops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kid-livraison-ingress
  namespace: app-kid
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
    - hosts:
        - kid-livraison.example.com  # À MODIFIER
        - api.kid-livraison.example.com  # À MODIFIER
      secretName: kid-livraison-tls
  rules:
    - host: kid-livraison.example.com  # À MODIFIER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    
    - host: api.kid-livraison.example.com  # À MODIFIER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
